[package]
name = "maqueen-plus"
version = "0.1.0"
authors = ["Dmitry Grebenyuk <dgrebenyuk89@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
microbit-v2 = "0.13.0"
nb = "1.0.0"
heapless = "0.7.16"
embedded-hal = "0.2.7"
libm = "0.2.6"
